--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "w5d1-live",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "DEBUG=w5d1-live:* nodemon ./bin/www"
-  },
-  "dependencies": {
-    "bcrypt": "^3.0.0",
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "dotenv": "~4.0.0",
-    "express": "~4.16.0",
-    "hbs": "~4.0.1",
-    "mongoose": "~4.13.4",
-    "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0",
-    "serve-favicon": "~2.4.5"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  }
+    "name": "w5d1-live",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "dev": "PORT=3000 DEBUG=w5d1-live:* nodemon ./bin/www"
+    },
+    "dependencies": {
+        "bcrypt": "^3.0.0",
+        "body-parser": "~1.18.2",
+        "cookie-parser": "~1.4.3",
+        "dotenv": "~4.0.0",
+        "express": "~4.16.0",
+        "hbs": "~4.0.1",
+        "mongoose": "~4.13.4",
+        "morgan": "~1.9.0",
+        "node-sass-middleware": "0.11.0",
+        "serve-favicon": "~2.4.5"
+    },
+    "devDependencies": {
+        "nodemon": "^1.12.1"
+    }
 }
